[gd_scene load_steps=8 format=3 uid="uid://dp834itcokuy6"]

[ext_resource type="FontFile" uid="uid://bklqh6kfdc8v0" path="res://assets/font/kirifont/KiriFont.otf" id="1_0n6m8"]
[ext_resource type="Script" path="res://scripts/green_score.gd" id="2_77agx"]
[ext_resource type="Script" path="res://scripts/purple_score.gd" id="3_rsudx"]
[ext_resource type="Script" path="res://scripts/progress_bar.gd" id="4_j30gk"]
[ext_resource type="Script" path="res://scripts/hud_manager.gd" id="5_hud_mgr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ndr0d"]

[sub_resource type="LabelSettings" id="LabelSettings_bodql"]

[node name="HUD" type="CanvasLayer" groups=["hud"]]
script = ExtResource("5_hud_mgr")

[node name="green_score" type="Label" parent="."]
z_index = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 25.0
offset_top = -19.0
offset_right = -945.0
offset_bottom = -979.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("1_0n6m8")
theme_override_font_sizes/font_size = 64
theme_override_styles/normal = SubResource("StyleBoxEmpty_ndr0d")
text = "0"
label_settings = SubResource("LabelSettings_bodql")
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("2_77agx")

[node name="GreenLabel" type="Label" parent="."]
z_index = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 28.0
offset_top = 54.0
offset_right = -939.0
offset_bottom = -985.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.1, 0.8, 0.1, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("1_0n6m8")
theme_override_font_sizes/font_size = 20
text = "GREEN"
horizontal_alignment = 1
vertical_alignment = 1

[node name="purple_score" type="Label" parent="."]
z_index = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 914.0
offset_top = -24.0
offset_right = -56.0
offset_bottom = -984.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("1_0n6m8")
theme_override_font_sizes/font_size = 64
theme_override_styles/normal = SubResource("StyleBoxEmpty_ndr0d")
text = "0"
label_settings = SubResource("LabelSettings_bodql")
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("3_rsudx")

[node name="PurpleLabel" type="Label" parent="."]
z_index = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 921.0
offset_top = 51.0
offset_right = -46.0
offset_bottom = -988.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.8, 0.1, 0.8, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("1_0n6m8")
theme_override_font_sizes/font_size = 20
text = "PURPLE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel" type="Panel" parent="."]
z_index = -1
offset_left = 2.0
offset_top = -1.0
offset_right = 1066.0
offset_bottom = 89.0

[node name="TimerLabel" type="Label" parent="."]
z_index = 2
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -97.0
offset_top = 12.0
offset_right = 73.0
offset_bottom = 42.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("1_0n6m8")
theme_override_font_sizes/font_size = 28
text = "1:30"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WinnerOverlay" type="Control" parent="."]
visible = false
z_index = 10
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="WinnerOverlay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.8)

[node name="WinnerLabel" type="Label" parent="WinnerOverlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("1_0n6m8")
theme_override_font_sizes/font_size = 72
text = "GREEN WINS!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RestartButton" type="Button" parent="WinnerOverlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 50.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "Play Again"

[node name="ScoreBar" type="ProgressBar" parent="."]
z_index = 1
offset_left = 145.0
offset_top = 49.0
offset_right = 905.0
offset_bottom = 74.0
value = 50.0
show_percentage = false
script = ExtResource("4_j30gk")

[node name="UpdateTimer" type="Timer" parent="ScoreBar"]
wait_time = 0.1
autostart = true

[connection signal="pressed" from="WinnerOverlay/RestartButton" to="." method="_on_restart_pressed"]
[connection signal="timeout" from="ScoreBar/UpdateTimer" to="." method="_on_update_timer_timeout"]
